Añadida funcion 'updateEvent' para trabajar con swagger. Actualizada API correspondiente
